@@ -1,3 +1,8 @@
+2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b27
+
+	* Change: album_permissions - if $gallery->album is not set, but
+	  set_albumName is, load it.
+
 2004-07-16 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b26
 
 
